<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetDailyCaloricNeedActivity" 
    android:orientation="vertical" >"

    <TextView android:id="@+id/total_calories_textview"
        android:textIsSelectable="true"
        android:text="@string/insert_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
   	<EditText android:id="@+id/insert_weight_edittext"
   	    android:inputType="number"
   	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/insert_weight" />
   	
   	<EditText android:id="@+id/insert_height_edittext"
   	    android:inputType="number"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/insert_height" />
   	
   	<EditText android:id="@+id/insert_age_edittext"
   	    android:inputType="number"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/insert_age" />
   	
  	<Button android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:text="@string/save"
   		android:onClick="saveUserData"/>

</LinearLayout>